--- a/index.html
+++ b/index.html
@@ -190,14 +190,14 @@
         }
 
         .user1 {
-            background-color: #f0e9eb;
-            color: #6F5F70;
+            background-color: #EBE0DE;
+            color: #373737;
             align-self: flex-end;
         }
 
         .user2 {
-            background-color: #e6e4f2;
-            color: #6F5F70;
+            background-color: #E6E6E9;
+            color: #373737;
             align-self: flex-start;
         }
 
