--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             width: 356px;
             height: 400px;
             /* Fixed height */
-            background-color: #fffbff;
+            background-color: #fafafa;
             overflow: hidden;
             /* Hide scroll */
             display: flex;
